--- a/TokenEx.InterviewProject/TokenEx.InterviewProject.csproj
+++ b/TokenEx.InterviewProject/TokenEx.InterviewProject.csproj
@@ -108,6 +108,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\beach.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
